# automatic-differentiation

./: .gitignore  README.md  d_ec823d871f03d301___init___py.html  d_ec823d871f03d301_elementaries_py.html  d_ec823d871f03d301_node_py.html  d_ec823d871f03d301_vector_function_py.html  index.html  pyproject.toml  scalar_to_scalar.py  scalar_to_vector.py  scalar_to_vector_case.py  status.json  vector_to_vector.py
.github/workflows/: code_coverage.yml  deploy_PyPI.yml  documentation.yml  run_test.yml  run_tests.yml
autodiff/: elementaries.py  forward_mode.py  node.py
autodiff_team29/: elementaries.py  node.py  vector_function.py
docs/: documentation.md  milestone1.md  milestone2_progress.md
docs/autodiff_team29/: elementaries.html  vector_function.html
docs/docs_htmls/: node.html
extension/: optimization_benchmark.py
milestone_archive/: milestone1.md
tests/: conftest.py  elementary_test.py  node_test.py  node_tests.py
