[tool.poetry]
name = "autodiff-team29"
version = "0.1.0"
description = "Automatic Differentation in Python"
authors = [
        "Andrew <andrewsullivan@g.harvard.edu>", 
        "Evan evanarnold@college.harvard.edu", 
        "James jameslionus@g.harvard.edu",
        "Luke <lukestoner@g.harvard.edu>",
        "Kane <kanenorman@g.harvard.edu>"
    ]

license = "MIT Liscense"
readme = "README.md"
packages = [{include = "autodiff_team29"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
expects = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
